Database was set and dao file was opened for task database. Date type was changed
